# cpp

cpp-labor/1_parcialis_felkeszules/: Book.cpp  Book.h  CMakeLists.txt  kimenet.txt  main.cpp
cpp-labor/gyakorlas_mapekkel/: CMakeLists.txt  main.cpp
cpp-labor/lab01/: CMakeLists.txt  bible.txt  functions.cpp  functions.h  main_01.cpp
cpp-labor/lab02/: CMakeLists.txt  Point.cpp  Point.h  main_02.cpp  util.cpp  util.h
cpp-labor/lab04/: CMakeLists.txt  Point.cpp  Point.h  PointSet.cpp  PointSet.h  main_04.cpp
cpp-labor/lab05/: CMakeLists.txt  Question.h  Quiz.cpp  QuizGame.cpp  QuizGame.h  main_05.cpp  quiz.txt
cpp-labor/lab06/: CMakeLists.txt  Matrix.cpp  Matrix.h  main_06.cpp
cpp-labor/lab07/: Answer.h  CMakeLists.txt  Question.h  Quiz.h  QuizGame.cpp  QuizGame.h  User.cpp  User.h  main_07.cpp
cpp-labor/lab09/: main_09.cpp
cpp-labor/lab10/: CMakeLists.txt  Company.cpp  Company.h  Employee.cpp  Employee.h  Manager.cpp  Manager.h  Person.cpp  Person.h  main_10.cpp
cpp-labor/lab10_extra/: CMakeLists.txt
cpp-labor/lab10_ismetles/: CMakeLists.txt  Employee.cpp  Employee.h  Manager.cpp  Manager.h  Person.cpp  Person.h  main.cpp
cpp-labor/lab11/: CMakeLists.txt  GraduationDao.cpp  GraduationDao.h  Student.cpp  Student.h  StudentService.cpp  StudentService.h  StudentServiceImpl.cpp  StudentServiceImpl.h  main_11.cpp
cpp-labor/lab12/: CMakeLists.txt  Settlement.cpp  (+4 more)
cpp-labor/labor12_ismetles/: CMakeLists.txt  Settlement.cpp  Settlement.h  SettlementStatisticsImpl.cpp  SettlementStatisticsImpl.h  SettlementsStatistics.cpp  SettlementsStatistics.h  main.cpp
(+76 files in other folders)
